--- a/breally/src/components/Page/PageContent.css
+++ b/breally/src/components/Page/PageContent.css
@@ -1,6 +1,48 @@
 .section {
-  height: 60vh;
-  width: 90%;
+  height: 70vh;
+  width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.testimonial {
+  background-color: #231e1e;
+  color: white;
+  font-size: 1rem;
+}
+h1 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+form {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.default-btn {
+  background-color: #dac2f2;
+  color: black;
+  text-align: center;
+  font-size: 0.9rem;
+  font-weight: 300;
+  padding: 1rem 2.5rem;
+  border: none;
+  border-radius: 99px;
+  cursor: pointer;
+}
+
+.input {
+  background-color: #f1f0f0;
+  width: 40%;
+  color: black;
+  text-align: left;
+  font-size: 0.9rem;
+  padding: 1rem 3rem;
+  border: none;
+  border-radius: 99px;
 }
