--- a/breally/src/components/Page/PageContent.css
+++ b/breally/src/components/Page/PageContent.css
@@ -1,10 +1,19 @@
 .section {
   height: 70vh;
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding-left: 10%;
+  padding-right: 10%;
+  box-sizing: border-box;
+  gap: 2rem;
+}
+
+#hero-image {
+  width: 516px;
+  height: 384px;
+  object-fit: cover;
 }
 
 .testimonial {
@@ -24,25 +33,38 @@ form {
   gap: 2rem;
 }
 
+blockquote {
+  margin: 0;
+}
+
 .default-btn {
   background-color: #dac2f2;
   color: black;
   text-align: center;
   font-size: 0.9rem;
   font-weight: 300;
-  padding: 1rem 2.5rem;
+  padding: 1rem 3rem;
   border: none;
   border-radius: 99px;
   cursor: pointer;
 }
 
-.input {
+.input-group {
+  display: flex;
+  gap: 1rem;
+}
+
+.input-field {
   background-color: #f1f0f0;
-  width: 40%;
+  width: 416px;
   color: black;
   text-align: left;
   font-size: 0.9rem;
   padding: 1rem 3rem;
   border: none;
   border-radius: 99px;
+}
+
+#confirmation {
+  color: #5edc4b;
 }
