--- a/breally/src/components/TopNavbar/TopNavbar.css
+++ b/breally/src/components/TopNavbar/TopNavbar.css
@@ -4,23 +4,29 @@
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 2rem;
   width: 100vw;
   height: 96px;
   border-bottom: 1.5px solid #f1f0f0;
   padding-left: 2rem;
   padding-right: 2rem;
+  text-decoration: none;
 }
 
 nav {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: 3rem;
   align-items: center;
+  margin-left: 2rem;
 }
 
-.nav-link {
+.nav-link p {
   text-decoration: none;
+  font-style: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #231e1e;
 }
 
 .default-btn {
@@ -33,4 +39,5 @@ nav {
   border: none;
   border-radius: 99px;
   cursor: pointer;
+  margin-right: 2rem;
 }
