--- a/breally/src/components/Page/PageContent.css
+++ b/breally/src/components/Page/PageContent.css
@@ -19,10 +19,15 @@
 .testimonial {
   background-color: #231e1e;
   color: white;
-  font-size: 1rem;
+  font-size: 1.4rem;
+  line-height: 1.9rem;
 }
+#author {
+  opacity: 60%;
+}
+
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 500;
 }
 
